--- a/s2.html
+++ b/s2.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mini App Demo</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
     body {
       font-family: sans-serif;
